--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-Electronic-Arduino-GPIO-Tester-backups/
-Electronic-Arduino-GPIO-Tester.kicad_prl
+LC-Meter-v1-backups/
+LC-Meter-v2-backups/
 fp-info-cache
+*.kicad_prl
+*.blend1
+*.lck
